--- a/ansible/roles/docker/tasks/main.yml
+++ b/ansible/roles/docker/tasks/main.yml
@@ -12,6 +12,10 @@
 - name: install docker-ce
   yum: name=docker-ce state=installed
 
+- name: install docker-py
+  pip:
+    name: docker-py
+
 - name: add group
   user: name=vagrant groups=docker append=yes
   tags: dockerhost
